# space-concordia-rover

src/arm_kinematics/: main.py  package.xml  setup.py  sim.py
src/arm_kinematics/arm_kinematics/: ik_node.py  ik_service_server.py  sim.py
src/arm_kinematics/srv/: ik.srv
src/gps/: package.xml  setup.py
src/gps/gps/: added_gps_node.py
src/gps/launch/: multiple.launch.py
src/ps5_controller/: controller_button_tester.py  package.xml  setup.cfg  setup.py
src/ps5_controller/ps5_controller/: ps5_node.py
src/ps5_controller/src/: ps5_node.py
src/urdf_files/ceres_arm_urdf/: ceres.xacro
