<?xml version="1.0"?>
<package format="3">
  <name>ps5_controller</name>
  <version>0.1.0</version>
  <description>ROS 2 node to control a robot using a PS5 controller</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pygame</exec_depend> <!-- If you install pygame system-wide -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

